--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<tr>
 					<td class="menu_label" align="right">PW</td>
 					<td align="left">
-						<input type="password" id="pw" name="pw" maxlength="16" value="" class="input_login" onblur="gfnInputBlur(this)" onfocus="gfnInputFocus(this)"  onkeyup="if(event.keyCode==13) validateEncrptedForm();" />
+						<input type="password" id="pw" name="pw" maxlength="16" value="" class="input_login" onkeyup="if(event.keyCode==13) fnMoveToButton();" />
 					</td>
 				</tr>
 			</table>
