--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>	
 </head>
 	<body id="bground">
-	<h1> Welcome Mobile Test Page</h1>
+	<h2> Test Page</h2>
 			<table>
 				<tr>
 					<td class="menu_label" align="right">ID</td>
