--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 					</td>
 				</tr>
 			</table>
-			<input type="button" id="btnLogin" class="button_login" value="Login" onclick="fnTest()">
-	</div>	
+			<input type="button" id="btnLogin" class="button_login" value="Login" onclick="fnTest()"> </input>
 </body>
 </html>
